Fix: Z-index DocCheck

--- a/src/styles.css
+++ b/src/styles.css
@@ -2033,7 +2033,7 @@ label {
 }
 
 #ex-doccheck-dialog {
-    z-index: 90003 !important;
+    z-index: 90011 !important;
 }
 
 .color-primary {
